# ml-sleep

./: .gitignore  12march2025fpn.ipynb  1march2025.ipynb  2march2025.ipynb  3march2025.ipynb  4march2025.ipynb  CLAUDE.md  README.md  ekyn.py  encoder.ipynb  eval.ipynb  requirements.txt  signal_start copy.ipynb  signal_start.ipynb  train.ipynb  train.py  train_ekyn_and_mice.ipynb  transformer_external_encoder.ipynb  transformer_internal_encoder.ipynb
gandalf/: .gitignore  pyproject.toml
gandalf/configs/: gandalf_loo.yaml
gandalf/scripts/: eval_gandalf.py  train_gandalf.py
gandalf/src/sleep/data/: __init__.py  datasets.py  splits.py
gandalf/src/sleep/models/: __init__.py  frodo.py  gandalf.py  residual.py
gandalf/src/sleep/training/: evaluate.py  train.py
lib/: utils.py
notebooks/: 11march2025.ipynb  11march2025jepa.ipynb  12march2025emg.ipynb  12march2025utime.ipynb  4march2025.ipynb  profile_batch_size.py  profile_model.py  test_norm.ipynb
variance-signatures/: explore.py
